updated input button styling

--- a/static/guide/monsters.html
+++ b/static/guide/monsters.html
@@ -18,70 +18,66 @@
       <nav id="main-nav">
         <div class="main-nav-divs" id="main-nav-left">
           <img class="medium-logo" src="../../client/images/logo.png" alt="small-logo"/>
-          <a class="nav-links btn-type-1-hover" href="/static/home.html"><h3>DragonMasters</h3></a>
-          <a class="nav-links btn-type-1-hover active" href="/static/guide/guide.html">Guide</a>
+          <a class="nav-links" href="/static/home.html"><h3>DragonMasters</h3></a>
+          <a class="nav-links active" href="/static/guide/guide.html">Guide</a>
         </div>
 
         <div class='main-nav-divs' id='nav-right'>
           <a
             href="/static/users/login.html"
-            class='nav-links btn-type-1-hover login-logout'
+            class='nav-links login-logout'
           >Log in/Sign up</a>
         </div>
       </nav>
 
       <section class='page-layout-2'>
         <header class='guide-title'>
-          <a class='btn btn-type-1 btn-color-1 guide-back-btn' href='/static/guide/guide.html'>&lt Back</a>
+          <a class='btn btn-type-1 btn-color-1 back-btn' href='/static/guide/guide.html'>&lt Back</a>
           <h1 class="title-2">Monsters</h1>
         </header>
   
         <section class='guide-body'>
   
-          <form id="guide-filters">
+          <form id="guide-filters" class="vertical-form">
             <p class="form-header">Filters</p>
             <button id='clear-btn' class='btn btn-color-1' type='reset'>Clear Filters</button>
             <div class="form-piece">
-              <label for="filter-name">Name</label>
-              <input id="filter-name" class="full-form" placeholder='ex: Dragon'/>
+              <label class="form-piece-filled">
+                <input class='form-input' required/>
+                <span class="form-label">Name</span>
+              </label>
             </div>
             <div class="form-piece">
-              <label for="filter-cr-min">Challenge Rating</label>
-              <input
-                id="filter-cr-min"
-                class="split-form"
-                placeholder='ex: 2'
-                type='number'
-                min='0'
-                max='30'
-              />
-              <p>-</p>
-              <input
-                id="filter-cr-max"
-                class="split-form"
-                placeholder='ex: 14'
-                type='number'
-                min='0'
-                max='30'
-              />
+              <label class="form-piece-filled">
+                <select class="form-input">
+                  <option selected value="">Select Size</option>
+                  <option>Tiny</option>
+                  <option>Small</option>
+                  <option>Medium</option>
+                  <option>Large</option>
+                  <option>Huge</option>
+                  <option>Gargantuan</option>
+                </select>
+                <span class="form-label">Size</span>
+              </label>
             </div>
-            <div class="form-piece">
-              <label for="filter-size">Size</label>
-              <select id="filter-size" class="full-form">
-                <option selected value=''>Select Size</option>
-                <option>Tiny</option>
-                <option>Small</option>
-                <option>Medium</option>
-                <option>Large</option>
-                <option>Huge</option>
-                <option>Gargantuan</option>
-              </select>
+            <p>Challenge Rating</p>
+            <div class="form-piece form-piece-split">
+              <div class="form-input-split">
+                <label class="form-piece-filled">
+                  <input class='form-input' required/>
+                  <span class="form-label">Min</span>
+                </label>
+              </div>
+              <div class="form-dash"></div>
+              <div class="form-input-split">
+                <label class="form-piece-filled">
+                  <input class='form-input' required/>
+                  <span class="form-label">Max</span>
+                </label>
+              </div>
             </div>
-            <!-- <button class='btn btn-type-2 btn-color-1' type='submit'>Filter</button> -->
           </form>
-          <!-- {viewPopup ? renderPopup() : ''} -->
-  
-          <!-- <GuideFilter type={type} setGuideData={setGuideData} /> -->
   
           <table class='guide-results'>
             <thead>
