--- a/static/home.html
+++ b/static/home.html
@@ -18,16 +18,16 @@
       <nav id="main-nav">
         <div class="main-nav-divs" id="main-nav-left">
           <img class="medium-logo" src="../client/images/logo.png" alt="small-logo"/>
-          <a class="nav-links btn-type-1-hover active" href="/static/home.html"><h3>DragonMasters</h3></a>
-          <a class="nav-links btn-type-1-hover" href="/static/guide/guide.html">Guide</a>
-          <a class="nav-links btn-type-1-hover" href="/static/stuff/stuff.html">My Stuff</a>
+          <a class="nav-links active" href="/static/home.html"><h3>DragonMasters</h3></a>
+          <a class="nav-links" href="/static/guide/guide.html">Guide</a>
+          <a class="nav-links" href="/static/stuff/stuff.html">My Stuff</a>
         </div>
 
         <div class='main-nav-divs' id='nav-right'>
           <p>Welcome, Rogue</p>
           <a
             href="/static/users/login.html"
-            class='nav-links btn-type-1-hover login-logout btn'
+            class='nav-links login-logout btn'
           >Logout</a>
         </div>
       </nav>
