--- a/static/stuff/stuff.html
+++ b/static/stuff/stuff.html
@@ -18,16 +18,16 @@
       <nav id="main-nav">
         <div class="main-nav-divs" id="main-nav-left">
           <img class="medium-logo" src="../../client/images/logo.png" alt="small-logo"/>
-          <a class="nav-links btn-type-1-hover" href="/static/home.html"><h3>DragonMasters</h3></a>
-          <a class="nav-links btn-type-1-hover" href="/static/guide/guide.html">Guide</a>
-          <a class="nav-links btn-type-1-hover active" href="/static/stuff/stuff.html">My Stuff</a>
+          <a class="nav-links" href="/static/home.html"><h3>DragonMasters</h3></a>
+          <a class="nav-links" href="/static/guide/guide.html">Guide</a>
+          <a class="nav-links active" href="/static/stuff/stuff.html">My Stuff</a>
         </div>
 
         <div class='main-nav-divs' id='nav-right'>
           <p>Welcome, Rogue</p>
           <a
             href="/static/users/login.html"
-            class='nav-links btn-type-1-hover login-logout'
+            class='nav-links login-logout'
           >Logout</a>
         </div>
       </nav>
@@ -46,7 +46,7 @@
             <h3>My Campaigns</h3>
             <h4>2 saved Campaigns</h4>
             <a class="btn btn-type-1 btn-color-1" href="/static/campaigns/campaigns.html">View All Campaigns</a>
-            <a class="btn btn-type-2 btn-color-3" >+ Create New</a>
+            <a class="btn btn-type-2 btn-color-3"  href="/static/campaigns/new-campiagn.html">+ Create New</a>
           </div>
           <div class='collections'>
             <h3>My Encounters</h3>
