--- a/static/users/login.html
+++ b/static/users/login.html
@@ -16,17 +16,21 @@
 
       <div class="login-register-page">
         <div class="login-form-container">
-          <form id="login-form">
+          <form id="login-form" class="vertical-form">
             <img class="large-logo" src="../../client/images/logo.png" alt="logo"/>
             <h1>DragonMasters</h1>
             <p class="form-header">Login</p>
             <div class="form-piece">
-              <label>Username</label>
-              <input class='full-form'/>
+              <label class="form-piece-underlined">
+                <input class='form-input' required/>
+                <span class="form-label">Username</span>
+              </label>
             </div>
             <div class="form-piece">
-              <label>Password</label>
-              <input class='full-form'/>
+              <label class="form-piece-underlined">
+                <input class='form-input' required/>
+                <span class="form-label">Password</span>
+              </label>
             </div>
             <a href="/static/stuff/stuff.html" class="btn btn-type-1 btn-color-1">Login</a>
             <p>New to the site? <a href="/static/users/register.html">Sign up here!</a></p>
