completed update of campaign endpoints to ORM, added login check to index server file so it won't be rewritten every function anymore

--- a/static/campaigns/new-campiagn.html
+++ b/static/campaigns/new-campiagn.html
@@ -38,7 +38,7 @@
 
       <div class="page-layout-2">
         <a class="btn btn-type-1 btn-color-1 back-btn" href="/static/campaigns/campaigns.html">Cancel</a>
-        <h2 class="title-2">Create new campaign</h2>
+        <h2 class="title-2">Create New Campaign</h2>
         <a class="btn btn-type-1 btn-color-3 create-btn" href="/static/campaigns/campaigns.html">Create</a>
 
         <div class="new-sections">
@@ -65,7 +65,7 @@
                   <option>Medium</option>
                   <option>Long</option>
                 </select>
-                <span class="form-label">School</span>
+                <span class="form-label">Length</span>
               </label>
             </div>
             <div class="form-piece">
