started restyling of react site

--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,12 @@
     <link rel="icon" href="./images/logo.ico">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./Components/Nav/Nav.css">
+    <link rel="stylesheet" href="./Components/StuffNav/StuffNav.css">
+    <link rel="stylesheet" href="./Components/Nav/Footer.css">
+    <link rel="stylesheet" href="./Components/Login/Signup-Login.css">
+    <link rel="stylesheet" href="./Components/Home/Home.css">
+    <link rel="stylesheet" href="./Components/Guides/Guide.css">
     <title>DragonMasters</title>
   </head>
   <body>
