--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,8 @@
     <link rel="stylesheet" href="./Components/Login/Signup-Login.css">
     <link rel="stylesheet" href="./Components/Home/Home.css">
     <link rel="stylesheet" href="./Components/Guides/Guide.css">
+    <link rel="stylesheet" href="./Components/Popout/Popout.css">
+    <link rel="stylesheet" href="./Components/QuickAdd/QuickAdd.css">
     <title>DragonMasters</title>
   </head>
   <body>
