finished switch to orm

--- a/static/campaigns/new-campiagn.html
+++ b/static/campaigns/new-campiagn.html
@@ -41,7 +41,7 @@
         <h2 class="title-2">Create New Campaign</h2>
         <a class="btn btn-type-1 btn-color-3 create-btn" href="/static/campaigns/campaigns.html">Create</a>
 
-        <div class="new-sections">
+        <div class="breakdown">
           <h3 class="dashboard-head">Details</h3>
           <form class="horizontal-form">
             <div class="form-piece">
@@ -83,14 +83,14 @@
           </form>
         </div>
 
-        <div class="new-sections">
+        <div class="breakdown">
           <h3 class="dashboard-head">Players</h3>
           <div class="add-players-display">
             <div></div>
           </div>
         </div>
         
-        <div class="new-sections">
+        <div class="breakdown">
           <h3 class="dashboard-head">Encounters</h3>
           <div class="add-encounters-display">
   
