redux updated and some other broken stuff fixed

--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="./Components/Guides/Guide.css">
     <link rel="stylesheet" href="./Components/Popout/Popout.css">
     <link rel="stylesheet" href="./Components/QuickAdd/QuickAdd.css">
+    <link rel="stylesheet" href="./Components/EncounterNew/EncounterNew.css">
     <title>DragonMasters</title>
   </head>
   <body>
