campaigns pages workingish

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,10 @@
     <link rel="stylesheet" href="./Components/Guides/Guide.css">
     <link rel="stylesheet" href="./Components/Popout/Popout.css">
     <link rel="stylesheet" href="./Components/QuickAdd/QuickAdd.css">
+    <link rel="stylesheet" href="./Components/EncounterSummary/EncounterSummary.css">
     <link rel="stylesheet" href="./Components/EncounterNew/EncounterNew.css">
+    <link rel="stylesheet" href="./Components/Campaigns/Campaigns.css">
+    <link rel="stylesheet" href="./Components/DeletePopup/DeletePopup.css">
     <title>DragonMasters</title>
   </head>
   <body>
