added quick fight for initiative, testing feature

--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="./Components/EncounterSummary/EncounterSummary.css">
     <link rel="stylesheet" href="./Components/EncounterNew/EncounterNew.css">
     <link rel="stylesheet" href="./Components/Campaigns/Campaigns.css">
+    <link rel="stylesheet" href="./Components/Initiative/Initiative.css">
     <link rel="stylesheet" href="./Components/DeletePopup/DeletePopup.css">
     <title>DragonMasters</title>
   </head>
