updated nname to match hosting name

--- a/client/index.html
+++ b/client/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="./Components/CreationForms/CreationForms.css">
     <link rel="stylesheet" href="./Components/Campaigns/Campaigns.css">
     <link rel="stylesheet" href="./Components/DeletePopup/DeletePopup.css">
-    <title>DragonMasters</title>
+    <title>DragonMasters Codex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
