--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/logo.ico">
+    <link rel="icon" href="./images/logo.png">
     <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="./Components/Nav/Nav.css">
