--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href='./custom.css'>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="icon" href="./images/logo.png">
-    <title>DragonMasters Codex</title>
+    <title>DragonMaster's Codex</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
